--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <div class="container">
       <h2>Добро пожаловать!</h2>
       <p>Лучшее место для получения качественного образования.</p>
-      <a href="#" class="btn" id="playButton">НАЖМИ ЕСЛИ АРСАГ ГЕЙ</a>
+      <a href="#" class="btn" id="playButton">Узнать Больше</a>
     </div>
   </section>
 
   <section class="about">
     <div class="container">
       <h3>О нашем учебном заведении</h3>
-      <p>Очень любим учится, особенно Арсаг хуеплет.</p>
+      <p>Очень любим учится, особенно каждый ученик</p>
     </div>
   </section>
 
@@ -89,7 +89,7 @@
           playButton.textContent = "Пауза";
         } else {
           myAudio.pause();
-          playButton.textContent = "Узнать больше"; 
+          playButton.textContent = "Узнать Больше"; 
         }
       } else {
         console.error("Ваш браузер не поддерживает воспроизведение аудио.");
